# FractalImageCompression

./: CMakeLists.txt  README.md  test.cpp
src/: CMakeLists.txt  compression.cpp  getname.cpp  getname.hpp  test.cpp
